--- a/frontend/unity-spa/index.html
+++ b/frontend/unity-spa/index.html
@@ -207,6 +207,7 @@
   <script src="core/run.js"></script>
   <script src="core/toast.service.js"></script>
   <script src="core/system-alerts.service.js"></script>
+  <script src="core/confirm.service.js"></script>
 
   <!-- Shared components -->
   <script src="shared/components/header/header.controller.js"></script>
@@ -242,6 +243,7 @@
   <!-- Daily Enrollment (SPA) -->
   <script src="features/registrar/daily-enrollment.service.js"></script>
   <script src="features/registrar/daily-enrollment.controller.js"></script>
+  <script src="features/finance/ledger.service.js"></script>
   <script src="features/finance/ledger.controller.js"></script>
   <!-- Finance: Payment Modes -->
   <script src="features/finance/payment-modes/payment-modes.service.js"></script>
@@ -253,6 +255,11 @@
   <!-- Finance: Student Billing -->
   <script src="features/finance/student-billing/student-billing.service.js"></script>
   <script src="features/finance/student-billing/student-billing.controller.js"></script>
+
+  <!-- Finance: Debit / Credit -->
+  <script src="features/finance/debit-credit/debit-credit.service.js"></script>
+  <script src="features/finance/debit-credit/debit-credit.controller.js"></script>
+
   <script src="features/scholarship/students.controller.js"></script>
   <script src="features/scholarship/scholarships/scholarships.service.js"></script>
   <script src="features/scholarship/scholarships/scholarships.controller.js"></script>
