--- a/frontend/unity-spa/features/finance/ledger.html
+++ b/frontend/unity-spa/features/finance/ledger.html
@@ -1,9 +1,9 @@
-<div class="max-w-6xl mx-auto px-4 py-8">
+<div class="max-w-7xl mx-auto px-4 py-8">
   <div class="flex items-start justify-between mb-6">
     <div>
       <h2 class="text-2xl font-semibold text-gray-800">{{ vm.title }}</h2>
       <p class="text-gray-600">
-        This screen is being migrated from the legacy CI app. Use the button below to open the current Student Ledger page.
+        View student financial activity (assessment, billing, and payments). Running balance is computed per row.
       </p>
     </div>
     <div class="flex items-center gap-2">
@@ -19,22 +19,214 @@
     </div>
   </div>
 
-  <div class="bg-white rounded shadow p-6">
-    <div class="flex items-center justify-between">
-      <div>
-        <h3 class="text-lg font-semibold text-gray-800">Student Ledger (Legacy)</h3>
-        <p class="text-gray-600">Opens the current CI Student Ledger list.</p>
-      </div>
-      <a class="inline-flex items-center px-3 py-2 rounded bg-indigo-600 text-white hover:bg-indigo-700"
-         ng-href="{{ vm.links.financeStudentLedger }}" target="_blank" rel="noopener">
-        <span class="fas fa-external-link-alt mr-2"></span> Open CI Student Ledger
-      </a>
-    </div>
-  </div>
-
+  <!-- New API-driven viewer -->
   <div class="mt-6 bg-white rounded shadow p-6">
-    <p class="text-gray-600">
-      Placeholder content. This page will later render API-driven ledger data from the Laravel service.
-    </p>
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-4">
+      <div>
+        <label class="block text-sm font-medium text-gray-700 mb-1">Student</label>
+        <div class="relative">
+          <input type="text"
+                 class="block w-full rounded border border-gray-300 bg-white px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
+                 pui-autocomplete
+                 ng-model="vm.filter.student_id"
+                 pui-source="vm.studentItems"
+                 pui-item-key="id"
+                 pui-label="(item.student_number + ' — ' + item.last_name + ', ' + item.first_name)"
+                 placeholder="Type name or student number..."
+                 pui-max-results="20"
+                 pui-min-chars="1"
+                 pui-query-debounce="200"
+                 pui-on-query="vm.onStudentQuery(q)"
+                 pui-on-select="vm.onStudentSelected()" />
+        </div>
+        <p class="text-xs text-gray-500 mt-1" ng-if="vm.filter.student_id">
+          Selected ID: {{ vm.filter.student_id }}
+        </p>
+        <p class="text-xs text-gray-400 mt-1" ng-if="!vm.filter.student_id">
+          Tip: Start typing to search and select a student.
+        </p>
+      </div>
+      <div>
+        <label class="block text-sm font-medium text-gray-700 mb-1">Term</label>
+        <select class="w-full border border-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
+                ng-model="vm.filter.term">
+          <option value="all">All terms</option>
+          <option ng-repeat="t in vm.terms track by t.intID" ng-value="t.intID">
+            {{ t.label }}
+          </option>
+        </select>
+      </div>
+      <div>
+        <label class="block text-sm font-medium text-gray-700 mb-1">Sort</label>
+        <select class="w-full border border-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
+                ng-model="vm.filter.sort">
+          <option value="asc">Oldest first</option>
+          <option value="desc">Newest first</option>
+        </select>
+      </div>
+    </div>
+
+    <div class="flex items-center gap-2 mb-4">
+      <button class="inline-flex items-center px-4 py-2 rounded bg-green-600 text-white hover:bg-green-700"
+              ng-click="vm.search()"
+              ng-disabled="vm.loading">
+        <span class="fas fa-search mr-2"></span> Search
+      </button>
+      <button class="inline-flex items-center px-4 py-2 rounded bg-gray-700 text-white hover:bg-gray-800"
+              ng-click="vm.exportCsv()"
+              ng-disabled="vm.loading || !vm.rows.length">
+        <span class="fas fa-file-csv mr-2"></span> Export CSV
+      </button>
+      <span class="text-sm text-gray-500" ng-if="vm.loading">
+        <span class="fas fa-spinner fa-spin mr-1"></span> Loading...
+      </span>
+      <span class="text-sm text-red-600" ng-if="vm.error">
+        <span class="fas fa-exclamation-triangle mr-1"></span> {{ vm.error }}
+      </span>
+    </div>
+
+    <!-- Summary -->
+    <div class="grid grid-cols-2 md:grid-cols-4 gap-4 mb-4">
+      <div class="p-3 bg-gray-50 rounded border">
+        <div class="text-xs text-gray-500">Opening</div>
+        <div class="text-lg font-semibold text-gray-800">{{ vm.summary.opening | number:2 }}</div>
+      </div>
+      <div class="p-3 bg-gray-50 rounded border">
+        <div class="text-xs text-gray-500">Assessment</div>
+        <div class="text-lg font-semibold text-blue-700">{{ vm.summary.assessment | number:2 }}</div>
+      </div>
+      <div class="p-3 bg-gray-50 rounded border">
+        <div class="text-xs text-gray-500">Payment</div>
+        <div class="text-lg font-semibold text-green-700">{{ vm.summary.payment | number:2 }}</div>
+      </div>
+      <div class="p-3 bg-gray-50 rounded border">
+        <div class="text-xs text-gray-500">Closing</div>
+        <div class="text-lg font-semibold text-gray-800">{{ vm.summary.closing | number:2 }}</div>
+      </div>
+    </div>
+
+    <!-- Excess transfer panel -->
+    <div class="mb-4" ng-if="vm.excess.showPanel">
+      <div class="p-4 border rounded bg-yellow-50">
+        <div class="flex flex-col md:flex-row items-end gap-4">
+          <div class="flex-1">
+            <div class="text-sm text-gray-700 font-medium mb-1">Excess available from this term</div>
+            <div class="text-2xl font-semibold text-amber-700">{{ vm.excess.available | number:2 }}</div>
+            <div class="text-xs text-gray-500 mt-1">Source Term ID: {{ vm.excess.source_term_id }}</div>
+          </div>
+          <div class="flex-1">
+            <label class="block text-sm font-medium text-gray-700 mb-1">Target Term</label>
+            <select class="w-full h-10 border border-gray-300 rounded px-3 py-0 text-sm leading-none focus:outline-none focus:ring-2 focus:ring-blue-500"
+                    ng-model="vm.excess.target_term_id"
+                    ng-options="(t.id || t.syid || t.sy_id || t.intID || t.value) as (t.label || t.sy_label || t.name || t.strSYName || ('Term #' + (t.id || t.syid || t.sy_id || t.intID || t.value))) for t in vm.terms"
+                    ng-change="vm.onTargetTermChange()">
+              <option value="">-- Select target term --</option>
+            </select>
+            <div class="text-xs text-gray-500 mt-1">Target term to view</div>
+          </div>
+          <div class="flex-1">
+            <label class="block text-sm font-medium text-gray-700 mb-1">Amount to apply</label>
+            <div class="flex items-center gap-2">
+              <input type="number" step="0.01" min="0.01"
+                    class="w-full h-10 border border-gray-300 rounded px-3 py-0 text-sm leading-none focus:outline-none focus:ring-2 focus:ring-blue-500"
+                    ng-model="vm.excess.amount" />
+              <button type="button" class="inline-flex items-center justify-center h-10 px-4 border border-gray-300 rounded bg-gray-200 hover:bg-gray-300 text-sm leading-none"
+                      ng-click="vm.suggestAmount()">Suggest</button>
+            </div>
+            <div class="text-xs text-gray-500 mt-1">Max available: {{ vm.excess.available | number:2 }}</div>
+          </div>
+        </div>
+        <div class="mt-3">
+          <label class="block text-sm font-medium text-gray-700 mb-1">Notes (optional)</label>
+          <textarea class="w-full border border-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
+                    rows="2"
+                    ng-model="vm.excess.notes"
+                    placeholder="Add remarks for this allocation..."></textarea>
+        </div>
+        <div class="mt-3">
+          <button type="button"
+                  class="inline-flex items-center px-4 py-2 rounded bg-amber-600 text-white hover:bg-amber-700 disabled:opacity-50"
+                  ng-click="vm.applyExcess()"
+                  ng-disabled="!vm.excess.target_term_id || !(vm.excess.amount > 0) || vm.loading">
+            <span class="fas fa-exchange-alt mr-2"></span> Apply Excess to Target Term
+          </button>
+          <span class="text-red-600 text-sm ml-3" ng-if="vm.error">{{ vm.error }}</span>
+        </div>
+      </div>
+    </div>
+
+    <!-- Applied transfers list -->
+    <div class="mb-4" ng-if="vm.excess.applications.length">
+      <div class="p-4 border rounded bg-gray-50">
+        <div class="text-sm font-medium text-gray-700 mb-2">Applied Transfers</div>
+        <div class="overflow-x-auto">
+          <table class="min-w-full table-auto border-collapse text-sm">
+            <thead>
+              <tr class="bg-gray-100 text-left text-gray-700">
+                <th class="px-3 py-2 border-b">Application #</th>
+                <th class="px-3 py-2 border-b">From Term</th>
+                <th class="px-3 py-2 border-b">To Term</th>
+                <th class="px-3 py-2 border-b">Amount</th>
+                <th class="px-3 py-2 border-b">Date</th>
+                <th class="px-3 py-2 border-b">Actions</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr ng-repeat="a in vm.excess.applications track by a.id">
+                <td class="px-3 py-2 border-b">{{ a.id }}</td>
+                <td class="px-3 py-2 border-b">{{ vm.termLabelById(a.source_term_id) || '-' }}</td>
+                <td class="px-3 py-2 border-b">{{ vm.termLabelById(a.target_term_id) || '-' }}</td>
+                <td class="px-3 py-2 border-b text-green-700 font-medium">{{ a.amount | number:2 }}</td>
+                <td class="px-3 py-2 border-b">{{ a.created_at || '-' }}</td>
+                <td class="px-3 py-2 border-b">
+                  <button type="button"
+                          class="px-3 py-1 rounded bg-red-600 text-white hover:bg-red-700"
+                          ng-click="vm.revertExcess(a.id)"
+                          ng-disabled="vm.loading">
+                    Revert
+                  </button>
+                </td>
+              </tr>
+              <tr ng-if="!vm.excess.applications.length">
+                <td colspan="6" class="px-3 py-2 text-center text-gray-500">No applied transfers.</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+
+    <!-- Results table -->
+    <div class="overflow-x-auto">
+      <table class="min-w-full table-auto border-collapse">
+        <thead>
+          <tr class="bg-gray-100 text-left text-sm text-gray-700">
+            <th class="px-3 py-2 border-b">Details</th>
+            <th class="px-3 py-2 border-b">Transaction Date</th>
+            <th class="px-3 py-2 border-b">OR Number</th>
+            <th class="px-3 py-2 border-b">Invoice Number</th>
+            <th class="px-3 py-2 border-b">Assessment</th>
+            <th class="px-3 py-2 border-b">Payment</th>
+            <th class="px-3 py-2 border-b">Cashier Name</th>
+            <th class="px-3 py-2 border-b">Running Balance</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr ng-if="!vm.loading && !vm.rows.length">
+            <td colspan="7" class="px-3 py-4 text-center text-gray-500">No data.</td>
+          </tr>
+          <tr ng-repeat="r in vm.rows track by r.id" class="text-sm">
+            <td class="px-3 py-2 border-b">{{ r.detail || '-' }}</td>
+            <td class="px-3 py-2 border-b">{{ r.posted_at || '-' }}</td>
+            <td class="px-3 py-2 border-b">{{ r.or_no || '-' }}</td>
+            <td class="px-3 py-2 border-b">{{ r.invoice_number || '-' }}</td>
+            <td class="px-3 py-2 border-b text-blue-700 font-medium">{{ r.assessment ? (r.assessment | number:2) : '' }}</td>
+            <td class="px-3 py-2 border-b text-green-700 font-medium">{{ r.payment ? (r.payment | number:2) : '' }}</td>
+            <td class="px-3 py-2 border-b">{{ r.cashier_name || '-' }}</td>
+            <td class="px-3 py-2 border-b font-semibold">{{ r.running_balance | number:2 }}</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
 </div>
