--- a/frontend/unity-spa/index.html
+++ b/frontend/unity-spa/index.html
@@ -346,6 +346,7 @@
   <!-- Academics: Faculty Loading -->
   <script src="features/academics/faculty-loading/faculty-loading.service.js"></script>
   <script src="features/academics/faculty-loading/faculty-loading.controller.js"></script>
+  <script src="features/academics/faculty-loading/by-faculty.controller.js"></script>
 
   <!-- Tuition Years feature (Finance) -->
   <script src="features/tuition-years/tuition-years.service.js"></script>
