--- a/frontend/unity-spa/features/registrar/daily-enrollment.html
+++ b/frontend/unity-spa/features/registrar/daily-enrollment.html
@@ -15,7 +15,7 @@
     </div>
 
     <a class="inline-flex items-center px-3 py-2 rounded bg-blue-600 text-white hover:bg-blue-700"
-       ng-href="#!/registrar/reports">
+       ng-href="#/registrar/reports">
       <span class="fas fa-arrow-left mr-2"></span> Back to Registrar Reports
     </a>
   </div>
