--- a/frontend/unity-spa/features/registrar/registration-viewer/registration-viewer.html
+++ b/frontend/unity-spa/features/registrar/registration-viewer/registration-viewer.html
@@ -119,10 +119,10 @@
               </select>
             </div>
             <div>
-              <label class="block text-sm font-medium text-gray-700 mb-1">ROG Status</label>
+              <label class="block text-sm font-medium text-gray-700 mb-1">Enrollment Status</label>
               <select
                 class="block w-full rounded border border-gray-300 bg-white px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
-                ng-model="vm.edit.intROG"
+                ng-model="vm.edit.enrollment_status"
                 ng-options="v.value as v.label for v in [
                   {value:0,label:'Enlisted'},
                   {value:1,label:'Enrolled'},
