--- a/frontend/unity-spa/index.html
+++ b/frontend/unity-spa/index.html
@@ -312,6 +312,9 @@
   <script src="features/academics/faculty-loading/faculty-loading.service.js"></script>
   <script src="features/academics/faculty-loading/faculty-loading.controller.js"></script>
   <script src="features/academics/faculty-loading/by-faculty.controller.js"></script>
+  <!-- Academics: Grading Sheet -->
+  <script src="features/academics/grading-sheet/grading-sheet.service.js"></script>
+  <script src="features/academics/grading-sheet/grading-sheet.controller.js"></script>
 
   <!-- Tuition Years feature (Finance) -->
   <script src="features/tuition-years/tuition-years.service.js"></script>
